--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
   <div class="sarreria">
     <h1>Hona hemen GOT ikusteko arrazoi batzuk</h1>
-      <h3>Etxuat gura ikustia EZTA erantzun posible bat :)</h3>
+      <h3>Etxuat gura ikustia EZTA erantzun posible bat :)y </h3>
     </div>
 
       <div class="separadoria"></div>
