--- a/index.html
+++ b/index.html
@@ -52,6 +52,5 @@
           <img class="argazkixa" src="https://i.ytimg.com/vi/injnmTjtiGM/maxresdefault.jpg" alt="">
         </a>
         <h3>.</h3>
-        <p>En resumen, GOT ikusi biozula pertsona VIP bat izateko eta nik esateotzutelako. :)
-        Argizkixan click iñ ezkero lehen denboradako kapitulo danak ikusiko ahal dozu HD-n. Hori bai ingelesez dauz, baiña bamos gaztelaniaz edo euskarazko subtitulueikin gurabozu momentu baten bialketan dotzut. Más te vale kasu ittia bestela... irakurri "web"-an izena.</p>
+        <p>En resumen, GOT ikusi biozula la ostia dalako. Argizkixan click iñ ezkero lehen denboradako kapitulo danak ikusiko ahal dozu HD-n. Hori bai ingelesez dauz, baiña bamos gaztelaniaz edo euskarazko subtitulueikin gurabozu momentu baten bialketan dotzut. Más te vale kasu ittia bestela... irakurri "web"-an izena.</p>
         </section>
