--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <img class="argazkixa" src="https://i.pinimg.com/originals/14/74/40/14744002ad0772bd6391a590cb3668fc.jpg" alt="">
         <h3>Dragoiak</h3>
         <p>Dudarik gabe dragoiak eta beraien ama dia GOT-eko protagonistak. "Animalia" honeik hain ondo dauz iñda serie osoko izakirik miresgarrixenak diala.
-      "𝔗𝔥𝔢𝔶 𝔞𝔯𝔢 𝔱𝔥𝔢 𝔬𝔫𝔩𝔶 𝔠𝔥𝔦𝔩𝔡𝔯𝔢𝔫 ℑ 𝔴𝔦𝔩𝔩 𝔢𝔳𝔢𝔯 𝔥𝔞𝔳𝔢."</p>
+      <br>"𝔗𝔥𝔢𝔶 𝔞𝔯𝔢 𝔱𝔥𝔢 𝔬𝔫𝔩𝔶 𝔠𝔥𝔦𝔩𝔡𝔯𝔢𝔫 ℑ 𝔴𝔦𝔩𝔩 𝔢𝔳𝔢𝔯 𝔥𝔞𝔳𝔢."</p>
       </section>
       <section class="herena">
         <a href="https://open.spotify.com/playlist/5mcKg442ABQYBc7FAUdXk5?si=b8a6ruaoQqGnPt7aibCfIA">
