--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <link rel = "stylesheet"  href = "style.css">
 <title>DRACARYS</title>
-<link rel="icon" href="tronua3.png">
+<link rel="icon" href="tronua.png">
 
 
   <div class="sarreria">
