--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <link rel = "stylesheet"  href = "style.css">
 <title>DRACARYS</title>
-<link rel="icon" href="tronua.png">
+<link rel="icon" href="https://freepngimg.com/thumb/tv_shows/33666-5-house-targaryen-clipart-thumb.png">
 
 
   <div class="sarreria">
